# SDD-Evolution-of-Todo-GIAIC-HACKATHON-II

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md
.claude/agents/: auth-security-specialist.md  database-architect.md  devops-deployment-specialist.md  fastapi-backend-developer.md  integration-specialist.md  nextjs-frontend-dev.md  qa-specialist.md
.claude/skills/API-client/: SKILL.md  client.md  error-handling.md  hooks.md
.claude/skills/NextJS-setup/: SKILL.md  components.md  configuration.md  structure.md
.claude/skills/fastapi-setup/: SKILL.md  (+3 more)
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  README.md  app.py  config.py  create_test_user_local.py  db.py  main.py  models.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  todo_agent.py
backend/mcp/: __init__.py  server.py  tools.py
backend/middleware/: auth.py
backend/routes/: auth.py  chat.py  tasks.py
backend/utils/: crud.py  jwt.py  password.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/api/: index.py  requirements.txt
frontend/app/: layout.tsx  page.tsx
frontend/components/: providers.tsx
frontend/hooks/: use-auth.tsx  use-tasks.ts
frontend/lib/: api.ts
frontend/types/: index.ts
history/adr/: 0001-mcp-architecture-with-openai-integration.md
specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/002-auth-todo-fullstack/: data-model.md  plan.md  spec.md  tasks.md
specs/1-ai-todo-chatbot/: SUMMARY.md  data-model.md  plan.md  research.md  spec.md  tasks.md
src/: main.py
(+42 files in other folders)
